# incident-assistant

./: .env.example  .gitignore  AGENTS.md  docker-compose.yml
.ai/checklists/: before-commit.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 441a48beec29_create_initial_tables.py
backend/api/routes/: workspaces.py
backend/app/: main.py
backend/core/: config.py  database.py
backend/models/: __init__.py  document.py  document_chunk.py  workspace.py
backend/schemas/: workspace.py
backend/services/: workspaces.py
